--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,19 +14,25 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "aes": "^0.1.0",
     "dependencies": "^0.0.1",
-    "expo": "~52.0.35",
+    "expo": "~52.0.36",
+    "expo-auth-session": "^6.0.3",
+    "expo-crypto": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "^4.0.8",
+    "expo-web-browser": "^14.0.2",
+    "firebase": "^11.3.1",
     "install": "^0.13.0",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "7.1.0",
     "peer": "^1.0.2",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.23.1",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.6.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
